--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^10.1.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.1.0",
+    "@nestjs/schedule": "^3.0.2",
     "@nestjs/swagger": "^7.1.2",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^10.1.0",
@@ -47,8 +48,10 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cron": "^2.4.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.7",
     "@types/node": "^20.3.1",
     "@types/nodemailer": "^6.4.8",
     "@types/supertest": "^2.0.12",
