--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "googleapis": "^122.0.0",
+    "nestjs-asyncapi": "^1.2.1",
     "nodemailer": "^6.9.4",
     "pg": "^8.11.1",
     "reflect-metadata": "^0.1.13",
